alignment fix

--- a/css/style.css
+++ b/css/style.css
@@ -211,6 +211,14 @@ footer p {
         margin: 0 auto;
         margin-top: 30px;
     }
+    .welcome-text h1 {
+        text-align: center;
+        font-size: 48px;
+        margin: 0 auto;
+    }
+    .welcome-text p {
+        font-size: 16px;
+    }
     .showcase {
         display: inline-block;
         text-align: center;
